@@ -401,6 +401,7 @@ class Smarty_Compiler extends Smarty {
     function _compile_include_tag($tag_args)
     {
         $attrs = $this->_parse_attrs($tag_args);
+	$arg_list = array();
 
         if (empty($attrs['file'])) {
             $this->_syntax_error("missing 'file' attribute in include tag");
